# vita-crashdump

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  gui.rs  lib.rs
