[package]
name = "vita-crashdump"
version = "0.2"
edition = "2021"
default-run = "vita-crashdump"

[lib]
name = "vita_crashdump"
path = "src/lib.rs"

[[bin]]
name = "vita-crashdump"
path = "src/cli.rs"

[[bin]]
name = "vita-crashdump-gui"
path = "src/gui.rs"
required-features = ["gui"]

[dependencies]
goblin = "0.9"
flate2 = "1"
rustc-demangle = "0.1"
eframe = { version = "0.33", optional = true }
rfd = { version = "0.15", optional = true }
egui-phosphor = { version = "0.11", optional = true }

[features]
gui = ["dep:eframe", "dep:rfd", "dep:egui-phosphor"]
